<resources>
    <string name="app_name">SensorApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_select_language">Select langauge</string>
    <string name="radio_en">en</string>
    <string name="radio_de">de</string>
    <string name="radio_hr">hr</string>
    <string name="radio_it">it</string>
    <string name="radio_si">si</string>
</resources>